Fix transition behind

--- a/client/stylesheets/test.css
+++ b/client/stylesheets/test.css
@@ -1,15 +1,13 @@
 .content-enter-before {
   transform: translate3d(100vw, 0, 0);
-  float: right;
 }
 
 .content-enter {
-    position: absolute;
-    width: 100%;
   z-index: 2;
-  transition: transform 500ms cubic-bezier(.36, .66, .04, 1);
-  -webkit-transition: -webkit-transform 500ms cubic-bezier(.36, .66, .04, 1);
+  transition: transform 5000ms cubic-bezier(.36, .66, .04, 1);
+  -webkit-transition: -webkit-transform 5000ms cubic-bezier(.36, .66, .04, 1);
   box-shadow: -5px 0 4px -3px #404040;
+  display: block;
 }
 
 .content-enter-active {
@@ -22,13 +20,10 @@
 
 .content-leave {
   z-index: 1;
-  position: absolute;
-  width: 100%;
 }
 
 .content-leave-active {
-    position: absolute;
-    width: 100%;
+  display: none;
 }
 
 .content {
